Agregado codigos php
Agregado la conexion a la BD, insertado de datos en la BD y comprobacion de que no se repita el usuario e email para poder registrarse

--- a/registro.html
+++ b/registro.html
@@ -25,7 +25,7 @@
         <input type="password" placeholder="" id="confirmPassword" name="confirmPassword"/>
 
         <label for="correoElectronico">Dirección de correo electronico:</label>
-        <input type="text" placeholder="" id="correoElectronico" name="correoElectronico"/>
+        <input type="text" placeholder="" id="email" name="email"/>
 
         <label for="direccion">Dirección del centro de acopio:</label>
         <input type="text" placeholder="" id="direccion" name="direccion"/>
