Agregado resultados de registrarse

--- a/registro.html
+++ b/registro.html
@@ -16,27 +16,29 @@
       <h1>Registrarse como centro de acopio</h1>
       <div class="contenedor-inputs">
         <label for="usuario">Usuario:</label>
-        <input type="text" placeholder="" id="usuario" name="usuario"/>
+        <input type="text" placeholder="" id="usuario" name="usuario" required/>
 
         <label for="password">Contraseña:</label>
-        <input type="password" placeholder="" id="password" name="password"/>
+        <input type="password" placeholder="" id="password" name="password" required/>
 
         <label for="confirmPassword">Confirmar contraseña:</label>
-        <input type="password" placeholder="" id="confirmPassword" name="confirmPassword"/>
+        <input type="password" placeholder="" id="confirmPassword" name="confirmPassword" required/>
 
         <label for="correoElectronico">Dirección de correo electronico:</label>
-        <input type="text" placeholder="" id="email" name="email"/>
+        <input type="email" placeholder="" id="email" name="email" required/>
 
         <label for="direccion">Dirección del centro de acopio:</label>
-        <input type="text" placeholder="" id="direccion" name="direccion"/>
+        <input type="text" placeholder="" id="direccion" name="direccion" required/>
 
         <label for="codigoPostal">Codigo postal:</label>
-        <input type="text" placeholder="" id="codigoPostal" name="codigoPostal"/>
+        <input type="text" placeholder="" id="codigoPostal" name="codigoPostal" required/>
 
         <label for="nombreCentroAcopio">Nombre del centro de acopio:</label>
-        <input type="text" placeholder="" id="nombreCentroAcopio" name="nombreCentroAcopio"/>
+        <input type="text" placeholder="" id="nombreCentroAcopio" name="nombreCentroAcopio" required/>
 
         <input type="submit" value="Registrarse" />
+
+        <a href="login.html">¿Ya tienes una cuenta?</a>
       </div>
     </div>
   </form>
