Added center editor

--- a/src/main-page.html
+++ b/src/main-page.html
@@ -10,9 +10,7 @@
       <div class="pp-dropdown">
         <img class="dropbtn" src="/images/menu-icon.png" height="30">
         <div class="dropdown-content">
-          <a href="test.html">Perfil</a>
-          <a href="test.html">Editor</a>
-          <a href="test.html">Ajustes</a>
+          <a href="center-editor.html">Editor</a>
           <a href="login.html">Cerrar</a>
         </div>
       </div>
