--- a/src/center-editor.html
+++ b/src/center-editor.html
@@ -21,17 +21,28 @@
         <form class="new-product" action="index.html" method="post">
           <input type="text" name="product" placeholder="* Nombre del producto">
 
-          <input type="text" name="observ" placeholder="* Observaciones">
-
           <input type="number" name="obtained" placeholder="Obtenido">
 
           <input type="number" name="needed" placeholder="* Necesitado">
 
-          <input type="date" name="date" placeholder="Fecha limite">
 
-          <input type="range" name="priority" min="1" max= "3">
 
-          <input class="submit"type="submit" value="Agregar">
+          <div class="ce-bottom-form">
+            <label class="lb-date"for="date">Fecha limite</label>
+            <label class="lb-prio"for="priority">* Prioridad (1-3)</label>
+            <br>
+            <input type="text" name="observ" placeholder="* Observaciones">
+
+            <input type="date" name="date" placeholder="Fecha limite">
+
+            <input type="range" name="priority" min="1" max= "3">
+          </div>
+          <br>
+
+          <div class="submt">
+            <input type="submit" value="Agregar">
+          </div>
+
         </form>
         <h4>* campos obligatorios</h4>
       </div>
