Lista centros de acopio

--- a/src/center-editor.html
+++ b/src/center-editor.html
@@ -61,63 +61,7 @@
             <th></th>
           </thead>
 
-          <tbody id="productos-tabla">
-            <tr>
-              <td>1</td>
-              <td>Galletasad</td>
-              <td>Paquetes medianos</td>
-              <td>50</td>
-              <td>670</td>
-              <td>N/A</td>
-              <td>3</td>
-              <td><button class="butt" type="button" name="edit">Edit</button></td>
-              <td><button class="butt" type="button" name="delete">X</button></td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Galletas</td>
-              <td>Paquetes chicos</td>
-              <td>50</td>
-              <td>670</td>
-              <td>N/A</td>
-              <td>3</td>
-              <td><button class="butt" type="button" name="edit">Edit</button></td>
-              <td><button class="butt" type="button" name="delete">X</button></td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Galletas</td>
-              <td>Paquetes medianos</td>
-              <td>50</td>
-              <td>670</td>
-              <td>N/A</td>
-              <td>3</td>
-              <td><button class="butt" type="button" name="edit">Edit</button></td>
-              <td><button class="butt" type="button" name="delete">X</button></td>
-            </tr>
-            <tr>
-              <td>4</td>
-              <td>Galletas</td>
-              <td>Paquetes medianos</td>
-              <td>50</td>
-              <td>670</td>
-              <td>N/A</td>
-              <td>3</td>
-              <td><button class="butt" type="button" name="edit">Edit</button></td>
-              <td><button class="butt" type="button" name="delete">X</button></td>
-            </tr>
-            <tr>
-              <td>5</td>
-              <td>Galletas</td>
-              <td>Paquetes medianos</td>
-              <td>50</td>
-              <td>670</td>
-              <td>N/A</td>
-              <td>3</td>
-              <td><button class="butt" type="button" name="edit">Edit</button></td>
-              <td><button class="butt" type="button" name="delete">X</button></td>
-            </tr>
-          </tbody>
+          <tbody id="productos-tabla"></tbody>
         </table>
 
       </div>
