--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,15 @@
         <button class="dm-login" type="button" name="login"><a href="login.html">Iniciar sesion</a></button>
       </header>
 
-      <div class="dm-list">
+      <div class="dm-list" id="listaCentros">
         <button type="button" name="center" class="dm-center">
             <h2>Maria de los angelesadfasdfj asndfoiansa osidfnoasdinfo aisdnfoaisndfoiasdnfoaisdnf</h2>
             <h3>999-6783134</h3>
             <h4>Calle 8 x 11 y 9a  #475 Col. Brisas</h4>
         </button>
-
       </div>
+
+      <script src="js/jquery-3.4.1.min.js"></script>
+      <script src="js/listaCentrosAcopio.js"></script>
   </body>
 </html>
